--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 .container {
     display: grid; /*Grid, mitte flexbox, kui tahta aside'i.*/
-    grid-template-rows: 20vh minmax(600px, auto) 200px; /*footer fixed, main on min'iga, et kui on bug või ei lae ss kasutaja saab aru, et sisu laeb. footer fix, sest miks mitte*/
+    grid-template-rows: 20vh minmax(600px, auto) 150px; /*footer fixed, main on min'iga, et kui on bug või ei lae ss kasutaja saab aru, et sisu laeb. footer fix, sest miks mitte*/
     grid-template-columns: auto; 
     grid-template-areas: 
     'header header'
@@ -40,7 +40,6 @@ body {
     background-color: #ff00ea;
 }
 .main {
-    border: 2px dashed #a80202;
     padding-top: 5%;
     grid-area: main;
     padding: 1.5rem;
@@ -50,7 +49,8 @@ body {
 .footer {
     grid-area: footer;
     text-align: center;
-    padding: 1rem 0;
-    background: #333;
-    color: #fff;
+    padding: 1rem auto;
+    background: #000000;
+    color: #00ff00;
+    border-top: 2px solid #00ff00;
 }
