--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,6 @@ body {
     height: auto;
     width: auto;
     object-fit: contain;
-    background-color: #ff00ea;
 }
 .main {
     padding-top: 5%;
@@ -53,4 +52,27 @@ body {
     background: #000000;
     color: #00ff00;
     border-top: 2px solid #00ff00;
+}
+/*ülesannete lehed*/
+.task-input, .task-button {
+    padding: 10px;
+    border: 2px solid #00ff00;
+    background: black;
+    color: #00ff00;
+    font-family: 'Courier', monospace;
+    font-size: 1rem;
+    margin: 5px auto;
+}
+.task-button {
+    cursor: pointer;
+    font-weight: bold;
+}
+.task-button:hover {
+    background: #00ff00;
+    color: black;
+}
+.vihje {
+    margin-top: 10px;
+    font-size: 1rem;
+    display: none;
 }
